FLUID-5482: Removed the stylus handling for "fl-text-align-center" that is no longer in use.

--- a/src/framework/preferences/css/stylus/PrefsEditorThemes.styl
+++ b/src/framework/preferences/css/stylus/PrefsEditorThemes.styl
@@ -53,10 +53,6 @@
     }
 }
 
-.fl-text-align-center {
-    text-align: center;
-}
-
 // UI Enhancer "Enlarge text" link options
 .fl-text-larger {
     font-size: 125% !important;
